# mcp-lightcast

./: .dockerignore  .env.example  Makefile  README.md  TESTING_PREMIUM_APIS.md  TESTING_SUMMARY.md  auth_debug_results.json  basic_api_test_results.txt  debug_auth.py  discover_all_endpoints.py  explore_detailed_endpoints.py  premium_api_basic_test_results.txt  pyproject.toml  test_basic_apis.py  test_basic_functionality.py  test_complete_endpoints.py  test_mcp_tools.py  test_post_endpoints.py  test_premium_apis.py  test_premium_apis_basic.py  test_working_endpoints.py
.github/workflows/: ci.yml  release.yml
config/: settings.py
src/mcp_lightcast/: __init__.py  server.py
src/mcp_lightcast/apis/: __init__.py  base.py  career_pathways.py  classification.py  job_postings.py  occupation_benchmark.py  similarity.py  skills.py  titles.py
src/mcp_lightcast/auth/: oauth.py
src/mcp_lightcast/tools/: __init__.py  career_pathways_tools.py  classification_tools.py  job_postings_tools.py  normalize_title_get_skills.py  occupation_benchmark_tools.py  similarity_tools.py  skills_tools.py  titles_tools.py  unified_skills.py  unified_skills_tools.py  workflow_tools.py
